[package]
name = "words"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
console = "0.15.2"
env_logger = "0.9.1"
indicatif = "0.17.1"
log = "0.4.17"
once_cell = "1.15.0"
regex = "1.6.0"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
tokio = { version = "1.21.2", features = ["rt", "rt-multi-thread"] }
